# infer-client-llm-tool

./: Makefile  README.md  pyproject.toml
infer_client/: __init__.py  cli.py  client.py  credentials.py  ollama.py
tests/: test_client.py
