[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infer-client"
version = "1.3.0"
description = "Python client SDK for the Transformer Inference API and Ollama"
readme = "README.md"
authors = [
    {name = "Antoine Lemor"},
]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "rich>=14.0.0",
]

[project.optional-dependencies]
pandas = [
    "pandas>=1.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pandas>=1.5.0",
]

[project.scripts]
infer = "infer_client.cli:main"

[tool.setuptools.packages.find]
include = ["infer_client*"]
